Reworked like based queries into regex based queries REST endpoint implementations for searching attributes Improved Omnikeeper OIA
