# backend/LandscapeRegistry/Model/BaseAttributeModel.cs
@@ -86,17 +86,17 @@ namespace LandscapeRegistry.Model
             return ret;
         }
 
-        public async Task<IEnumerable<CIAttribute>> FindAttributesByName(string like, ICIIDSelection selection, long layerID, NpgsqlTransaction trans, TimeThreshold atTime)
+        public async Task<IEnumerable<CIAttribute>> FindAttributesByName(string regex, ICIIDSelection selection, long layerID, NpgsqlTransaction trans, TimeThreshold atTime)
         {
             var ret = new List<CIAttribute>();
 
             using var command = new NpgsqlCommand($@"
             select distinct on(ci_id, name, layer_id) id, name, ci_id, type, value, state, changeset_id from
-                attribute where timestamp <= @time_threshold and layer_id = @layer_id and name like @like_name and ({selection.WhereClause}) order by ci_id, name, layer_id, timestamp DESC
+                attribute where timestamp <= @time_threshold and layer_id = @layer_id and name ~ @regex and ({selection.WhereClause}) order by ci_id, name, layer_id, timestamp DESC
             ", conn, trans); // TODO: remove order by layer_id, but consider not breaking indices first
 
             command.Parameters.AddWithValue("layer_id", layerID);
-            command.Parameters.AddWithValue("like_name", like);
+            command.Parameters.AddWithValue("regex", regex);
             command.Parameters.AddWithValue("time_threshold", atTime.Time);
             selection.AddParameters(command.Parameters);
 
